<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/personnelSelection"
        app:titleMarginStart="20dp"
        android:background="@color/black"
        app:titleTextColor="@color/yellow"
        app:logo="@drawable/baseline_badge_24"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:background="@color/yellow">

        <EditText
            android:id="@+id/nameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/inputName"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/surnameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/inputSurname"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/ageET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/inputAge"
            android:textSize="20sp"
            android:inputType="number"/>
        <Spinner
            android:id="@+id/spinnerRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

    </LinearLayout>

    <Button
        android:id="@+id/saveButtonBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save"
        android:layout_margin="15dp"/>

    <ListView
        android:id="@+id/listViewLV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow"/>

</LinearLayout>