<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:padding="15dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:gravity="center">

        <TextView
            android:id="@+id/personNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/personSurnameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/surname"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/personAgeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="end"/>

            <TextView
                android:id="@+id/personRoleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/role"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="end"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>